<resources>
    <string name="app_name">InsubriApp</string>
    <string name="default_web_client_id">254906498303-h5t9ec7kii7oi7p0b0jharc7dqt1suf8.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nomeText"> <u>Nome</u> </string>
    <string name="cognomeText"> <u>Cognome</u> </string>
    <string name="usernameText"> <u>Username</u> </string>
    <string name="emailText"> <u>Email</u> </string>
    <string name="facoltaText"> <u>Facoltà</u> </string>
    <string name="caricamento">Caricamento...</string>
    <string name="forgotPassword"><u>Hai dimenticato la password?</u></string>

</resources>